--- a/home/templates/content_landing.html
+++ b/home/templates/content_landing.html
@@ -1,8 +1,22 @@
 <!-- content_landing.html -->
+{% load static %}
+
 <div>
     <h2 class="text-2xl font-bold mb-4">Welcome to OnlyWorlds</h2>
-    <p class="mb-4">Try a brand new app below</p>
-            <p class="mb-4"><br><br></p>
+    <p class="mb-2">You are invited to engage with the OW <b><a href="#" id="link-to-framework" class="text-blue-500 hover:underline">Framework</a></b></p>
+
+{#    <p class="mb-8">See <b>Framework</b> for more details on what that means</p>#}
+
+    <p class="mb-2">This closed alpha precedes an open source release later this year</p>
+    <p class="mb-8">Following a rework and refinement of the framework through user feedback</p>
+
+    <p class="mb-2">The primary app for this is the iOs/android Companion app, link below </p>
+    <p class="mb-8">See the <b><a href="#" id="link-to-apps" class="text-blue-500 hover:underline">Applications</a></b> section for more details and feedback form</p>
+  <a href="https://discord.gg/twCjqvVBwb" class="inline-block">
+  <img src="{% static 'img/discordlogo.png' %}" alt="Join the Discord" class="w-6">
+</a>
+
+
     <div class="flex flex-col items-center gap-4 mt-4">
         <a href="https://testflight.apple.com/join/bXvUExCL" class="px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 md:py-4 md:text-lg md:px-10" target="_blank" rel="noopener noreferrer">
             iOS Testflight
@@ -10,5 +24,10 @@
         <a href="https://play.google.com/apps/internaltest/4700705784602434522" class="px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-green-600 hover:bg-green-700 md:py-4 md:text-lg md:px-10" target="_blank" rel="noopener noreferrer">
             Android APK
         </a>
+
+
     </div>
+
+
+
 </div>
