--- a/home/templates/content_framework.html
+++ b/home/templates/content_framework.html
@@ -1,23 +1,22 @@
 <!-- content_framework.html -->
 {#<div class="text-center">#}
 
+<div>
+    <p class="mb-2">World building is, at its core, an activity of organizing creative data</p>
+    <p class="mb-2">There are countless ways to write, organize and display worlds: tools, apps, docs, wikis, websites</p>
+    <p class="mb-8">Most of these domains have limited options for exporting and transferring worlds effectively to others</p>
 
-<div class="mb-4" id="accordion-collapse1" data-accordion="collapse">
- <h2 id="accordion-collapse-heading-1" class="mb-4">
-    <button type="button" class="text-white text-2xl font-bold rounded-lg px-5 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapse-body-1" aria-expanded="false" aria-controls="accordion-collapse-body-1">
-      Key Goals
-      <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
-    </button>
-</h2>
-  <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1">
-     <div class="p-1 border border-gray-200 dark:border-gray-700 rounded-b-lg ">
-          <p class="mb-2">1. Provide a data structure blueprint for capturing worlds and their content </p>
-              <p class="mb-2">2. Allow building of any fictional / history worlds with blueprint  </p>
+    <p class="mb-2">OnlyWorlds aims to define a common format for world building</p>
+    <p class="mb-6">As defined in these three key goals:</p>
+          <div class="p-1 border border-gray-200 dark:border-gray-700 rounded-b-lg ">
+          <p class="mb-2">1. Provide a data structure 'blueprint' for creating worlds and their content </p>
+              <p class="mb-2">2. Allow users maximum flexibility and range in building worlds with this blueprint </p>
               <p class="mb-2">3. Make world files transferable across tools, games, devices and web </p>
 
     </div>
-  </div>
-</div>
+    </div>
+
+
 
 
 <div class="mb-4"  id="accordion-collapse2" data-accordion="collapse">
@@ -29,11 +28,11 @@
 </h2>
   <div id="accordion-collapse-body-2" class="hidden" aria-labelledby="accordion-collapse-heading-2">
      <div class="p-1 border border-gray-200 dark:border-gray-700 rounded-b-lg ">
-           <p class="mb-2">  1. Core data structures are open source, free to use, and community-driven</p>
-          <p class="mb-2">  2. Users keep full ownership and control over their world data and visibility</p>
-          <p class="mb-2">  3. Allow any developers and artists to build into the framework, on whatever pricing model</p>
-          <p class="mb-2">  4. Promote collaborative development on the framework, its tools, its worlds</p>
-         <p class="mb-2">  5. Core OnlyWorlds applications are always free:  1 mobile, 1 desktop, 1 web</p>
+           <p class="mb-2">1. Core data structures are open source, free to use, and community-driven</p>
+          <p class="mb-2">2. Users keep full ownership and control over their world data and visibility</p>
+          <p class="mb-2">3. Allow any developers and artists to build into the framework, on whatever pricing model</p>
+          <p class="mb-2">4. Promote collaborative development on the framework, its tools, its worlds</p>
+         <p class="mb-2">5. The framework should be as flexible and intuitive as possible, for the broadest range of fantasy and history worlds</p>
 
     </div>
   </div>
