--- a/home/templates/logged_in_home.html
+++ b/home/templates/logged_in_home.html
@@ -27,6 +27,7 @@
                     </button>
                     <button class="tab text-gray-500 py-4 px-6 font-bold block hover:text-white focus:outline-none" id="worlds-tab" data-target="worlds">
                         Worlds
+                    </button>
 {#                    </button>#}
 {#                            <button class="tab text-gray-500 py-4 px-6 font-bold block hover:text-white focus:outline-none" data-target="policy">#}
 {#                        Privacy Policy#}
