--- a/home/templates/logged_in_home.html
+++ b/home/templates/logged_in_home.html
@@ -27,6 +27,7 @@
                     </button>
                     <button class="tab text-gray-500 py-4 px-6 font-bold block hover:text-blue-500 focus:outline-none" data-target="worlds">
                         Worlds
+                             </button>
 {#                    </button>#}
 {#                            <button class="tab text-gray-500 py-4 px-6 font-bold block hover:text-blue-500 focus:outline-none" data-target="policy">#}
 {#                        Privacy Policy#}
@@ -67,7 +68,7 @@
 
         </div>
     </div>
-
+  </div>
  <script>
 document.addEventListener('DOMContentLoaded', () => {
     const tabs = document.querySelectorAll('.tab-content');
