--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -11,16 +11,18 @@
             <h1 class="text-5xl font-bold text-[#37C1F0] mb-2">OnlyWorlds</h1>
             <p class="text-lg italic px-4 md:px-6 py-2">
                 A framework for world building on an open source data format<br>
-                For world creation, display and simulation; across tools, games, apps, and web
-                <br><br><br>     </p>
-                   <p class="text-m  px-4 md:px-6 py-2">
-                Now in closed alpha for data structure feedback, using: <br>      </p>
-                <ul class="list-disc mx-auto space-y-2 text-left" style="max-width: max-content;">
-        <li>An android/iOs companion app</li>
-        <li>A Unity Editor maps & pins tool</li>
-        <li>A Unity WebGL explorer tool</li>
-        <li>An API for world export and import across these apps</li>
-    </ul>
+                For world creation, presentation and simulation across tools, games, apps and web
+                    </p>
+
+
+{#                   <p class="text-m  px-4 md:px-6 py-2">#}
+{#                Now in closed alpha for data structure feedback, using: <br>      </p>#}
+{#                <ul class="list-disc mx-auto space-y-2 text-left" style="max-width: max-content;">#}
+{#        <li>An android/iOs companion app</li>#}
+{#        <li>A Unity Editor maps & pins tool</li>#}
+{#        <li>A Unity WebGL explorer tool</li>#}
+{#        <li>An API for world export and import across these apps</li>#}
+{#    </ul>#}
 
         </div>
     </div>
@@ -51,8 +53,8 @@
 {% endfor %}
 
                 <button type="submit"
-                        class="w-full flex justify-center py-2 px-4 border border-transparent shadow-sm text-lg font-medium rounded-md text-[#c3ecfa] bg-[#2c9ac0] hover:bg-[#37c1f0] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-700">
-                    Request Access
+                        class="w-full flex justify-center py-2 px-4 border border-transparent shadow-sm text-lg font-medium rounded-md text-[#f3fbfe] bg-[#2c9ac0] hover:bg-[#37c1f0] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-700">
+                    Send Message
                 </button>
             </form>
         </div>
