--- a/templates/_base.html
+++ b/templates/_base.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OnlyWorlds</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Workbench&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/main.css' %}" type="text/css">
    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.5/dist/cdn.min.js"></script>
@@ -13,6 +14,13 @@
     {#    CSS Styles #}
 
     {#    <link rel="stylesheet" href="{% static 'css/main.css' %}" type="text/css">#}
+
+<style>
+    .custom-font {
+        font-family: 'Roboto', sans-serif;
+    }
+</style>
+
 </head>
 <body class="bg-black">
 
