--- a/home/templates/content_framework.html
+++ b/home/templates/content_framework.html
@@ -28,11 +28,12 @@
 </h2>
   <div id="accordion-collapse-body-2" class="hidden" aria-labelledby="accordion-collapse-heading-2">
      <div class="p-1 border border-gray-200 dark:border-gray-700 rounded-b-lg ">
-           <p class="mb-2">1. Core data structures are open source, free to use, and community-driven</p>
-          <p class="mb-2">2. Users keep full ownership and control over their world data and visibility</p>
-          <p class="mb-2">3. Allow any developers and artists to build into the framework, on whatever pricing model</p>
-          <p class="mb-2">4. Promote collaborative development on the framework, its tools, its worlds</p>
-         <p class="mb-2">5. The framework should be as flexible and intuitive as possible, for the broadest range of fantasy and history worlds</p>
+
+         <p class="mb-2">OnlyWorlds is collaborative: in how its central data structure evolves, how it is itnerfaced with, and the worlds themselves  </p>
+         <p class="mb-2">Open source and a core blueprint and set of tools that are always free to use</p>
+          <p class="mb-2">Users keep full ownership and control over their world data and visibility</p>
+          <p class="mb-2">Allow any developers and artists to build into the framework, on whatever pricing model</p>
+         <p class="mb-2">The framework should be as flexible and intuitive as possible, for the broadest range of fantasy and history worlds</p>
 
     </div>
   </div>
