--- a/home/templates/content_worlds.html
+++ b/home/templates/content_worlds.html
@@ -1,8 +1,7 @@
 <!-- content_worlds.html -->
 {#<div class="text-center">#}
 <div>
-    <p class="mb-4">Worlds that you send/fetch using the Companion app's Exporter function are stored on the server</p>
-    <p class="mb-4">This section will offer an interface to view, manage them</p>
-    <p class="mb-4">Until then, please keep manual track of any uploaded worlds</p>
+    <p class="mb-4">World management interface under construction</p>
+    <p class="mb-4">Worlds can be imported and exported already using the API. Note down your world keys</p>
 
 </div>
