--- a/home/templates/content_framework.html
+++ b/home/templates/content_framework.html
@@ -1,20 +1,215 @@
 <!-- content_framework.html -->
+{% load static %}
+
+<style>
+
+.no-background {
+    background: none !important; /* No background */
+    border: none !important; /* No border */
+    box-shadow: none !important; /* No box shadow */
+}
+
+/* Specific to accordion for visual hierarchy */
+.accordion-button {
+    background: transparent !important; /* Transparency for button */
+    color: #ADD8E6 !important; /* Adjust color as necessary */
+}
+
+.accordion-content {
+    padding: 0; /* Remove padding if needed */
+}
+
+.accordion-list-item {
+    list-style-type: disc; /* or 'none' if you prefer no bullets */
+    margin-left: 20px; /* Adjust indentation */
+}
+</style>
+
+<div class="custom-font mb-2" id="accordion-collapse1" data-accordion="collapse">
+    <h2 id="accordion-collapse-heading-1" class="mb-4">
+            <button type="button" class="text-white text-2xl font-bold rounded-lg px-5 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapse-body-1" aria-expanded="false" aria-controls="accordion-collapse-body-1">
+Overview
+      <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+    </button>
+    </h2>
+
+    <div id="accordion-collapse-body-1" class="hidden no-background" aria-labelledby="accordion-collapse-heading-1">
+        <div class="accordion-content">
+    <p class="mb-2">There are many tools that help <b>write, organize and display worlds</b></p>
+    <p class="mb-2">But there are limited ways to <b>transfer world data</b> across these domains</p>
+
+    <p class="mb-2">OnlyWorlds aims to provide a <b>common standard</b> in world building</p>
+               <ul class="accordion-content accordion-list-item">
+            <li>By proposing a 'blueprint' for creating worlds and their content</li>
+            <li>That supports the broadest range of worlds</li>
+            <li>And is transferable across tools, games, devices and web</li>
+        </ul>
+            <br>
+    <p class="mb-2">The framework includes</p>
+                <ul class="accordion-content accordion-list-item">
+            <li>A substantial database schema</li>
+            <li>Infrastructure for open source development and deployment</li>
+            <li>A website for hosting and managing world files</li>
+            <li>A core set of tools</li>
+            <li>A promise of games</li>
+        </ul>
+            <br>
+
+        </div>
+    </div>
+</div>
+
+<div class="custom-font mb-4" id="accordion-collapse2" data-accordion="collapse">
+        <button type="button" class="text-white text-2xl font-bold rounded-lg px-5 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapse-body-2" aria-expanded="false" aria-controls="accordion-collapse-body-2">
+      Philosophy
+      <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+    </button>
+
+    <div id="accordion-collapse-body-2" class="hidden no-background" aria-labelledby="accordion-collapse-heading-2">
+           <p class="mb-2">OnlyWorlds aims to always provide</p>
+   <ul class="accordion-content accordion-list-item">
+       <li>An open source, community-driven and future proof <b>data system</b></li>
+            <li><b>Freedom</b> to build applications for and worlds with it</li>
+            <li><b>Ownership</b> and control of worlds to the users</li>
+        </ul>
+    </div>
+</div>
+
+
+<div class="custom-font mb-4" id="accordion-collapse3" data-accordion="collapse">
+        <button type="button" class="text-white text-2xl font-bold rounded-lg px-5 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapse-body-3" aria-expanded="false" aria-controls="accordion-collapse-body-3">
+      Current State
+      <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+    </button>
+
+    <div id="accordion-collapse-body-3" class="hidden no-background" aria-labelledby="accordion-collapse-heading-3">
+          <p class="text-sm">18 April 2024</p>
+        <br>
+             <p class="mb-2"><b>Database</b></p>
+           <ul class="accordion-content accordion-list-item">
+            <li>The core framework consists of 18 element Categories, each with a set of attribute groups and fields, many of which link to other elements</li>
+            <li>Content level: basics in place, in need of user feedback</li>
+            <li>Technical level: reworking the legacy SQLite systems into a central open source</li>
+            <li>Aim to coalesce these two into a 1.0 release late 2024</li>
+
+        </ul>     <br>
+
+
+             <p class="mb-2"><b>Mobile</b></p>
+           <ul class="accordion-content accordion-list-item">
+            <li>The mobile app is the first release on the framework</li>
+            <li>It is a prototype that introduces the framework in hope for feedback</li>
+            <li>The app can send its worlds to the website, from where it can be viewed and exported</li>
+        </ul>
+
+        <br>
+
+<p class="mb-2"><b>Infrastructure</b></p>
+          <ul class="accordion-content accordion-list-item">
+            <li>Functional: user registration, authentication, world api</li>
+            <li>Next work is on profile management, world interfacing</li>
+            <li>Two Unity tools (editor, WebGL) are operational with the api, shortly available</li>
+            <li>Discord server available for feedback and community</li>
+        </ul>
+    </div>
+</div>
+<div class="custom-font mb-4" id="accordion-collapse4" data-accordion="collapse">
+        <button type="button" class="text-white text-2xl font-bold rounded-lg px-5 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapse-body-4" aria-expanded="false" aria-controls="accordion-collapse-body-4">
+      History
+      <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+    </button>
+    <div id="accordion-collapse-body-4" class="hidden no-background" aria-labelledby="accordion-collapse-heading-4">
+
+           <p class="mb-2">I Titus have been developing world building tools in various capacities since 2011</p>
+
+        <p class="mb-2">Much of this in Unity, that I used for <a href="https://github.com/worldsmithdev/Worldsmith" class="text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer">WorldSmith</a> in 2018:</p>
+               <p class="mb-2">An open source world engine with a <a href="https://imgur.com/XsVQU7W" class="text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer">world</a> (Sicily ~500BC), <a href="https://imgur.com/XsVQU7W" class="text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer"> economy</a>, and game built on top of it</p>
+            <p class="mb-2">My primary interests are ((tools for (simulation of)) worlds for) games and history: political, economy, military </p>
+            <p class="mb-2">Wrote my <a href="https://theses.liacs.nl/pdf/2021-2022-OostingTitus.pdf" class="text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer">master's thesis</a> on the translation of politics into a flexible <a href="https://github.com/tmoosting/Schemer" class="text-blue-500 hover:underline" target="_blank" rel="noopener noreferrer">world building structure</a></p>
+
+
+    </div>
+</div>
+
+
+
+
+<div class="custom-font mb-4" id="accordion-collapse5" data-accordion="collapse">
+        <button type="button" class="text-white text-2xl font-bold rounded-lg px-5 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapse-body-5" aria-expanded="false" aria-controls="accordion-collapse-body-5">
+      Changelog
+      <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+    </button>
+
+    <div id="accordion-collapse-body-5" class="hidden no-background" aria-labelledby="accordion-collapse-heading-5">
+
+             <p class="mb-2">18-04-2024    Version 0.15.10</p>
+        <ul class="accordion-content accordion-list-item">
+            <li>iOs / android stable</li>
+            <li>progression complete</li>
+            <li>AI work remains: parser mode, query creation</li>
+        </ul>
+
+        <br>
+           <p class="mb-2">05-04-2024    Version 0.14.x</p>
+        <ul class="accordion-content accordion-list-item">
+            <li>iOs / android setup</li>
+            <li>essential bugfixes</li>
+            <li>fixing and finishing progression</li>
+        </ul>
+    </div>
+</div>
+
+{#<div class="custom-font mb-4" id="accordion-collapse3" data-accordion="collapse">#}
+{#    <div id="accordion-collapse-body-3" class="hidden no-background" aria-labelledby="accordion-collapse-heading-3">#}
+{#        <div class="accordion-content">#}
+{#            <p class="mb-2">1. Text</p>#}
+{#                  <p class="mb-2">OnlyWorlds is collaborative: in how its central data structure evolves, how it is itnerfaced with, and the worlds themselves  </p>#}
+{#         <p class="mb-2">Open source and a core blueprint and set of tools that are always free to use</p>#}
+{#          <p class="mb-2">Users keep full ownership and control over their world data and visibility</p>#}
+{#          <p class="mb-2">Allow any developers and artists to build into the framework, on whatever pricing model</p>#}
+{#         <p class="mb-2">The framework should be as flexible and intuitive as possible, for the broadest range of fantasy and history worlds</p>#}
+{#        </div>#}
+{#    </div>#}
+{#</div>#}
+
+
+
+{% comment %}
+
+
+<!-- content_framework.html -->
 {#<div class="text-center">#}
 
-<div>
-    <p class="mb-2">World building is, at its core, an activity of organizing creative data</p>
+
+<div class="mb-4"  id="accordion-collapse1" data-accordion="collapse">
+ <h2 id="accordion-collapse-heading-1" class="mb-4">
+    <button type="button" class="text-white text-2xl font-bold rounded-lg px-5 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapse-body-1" aria-expanded="false" aria-controls="accordion-collapse-body-1">
+Overview
+      <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+    </button>
+</h2>
+
+  <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1">
+     <div class="p-1 border border-gray-200 dark:border-gray-700 rounded-b-lg ">
+
+        <div>
+    <p class="mb-2">Problem</p>
     <p class="mb-2">There are countless ways to write, organize and display worlds: tools, apps, docs, wikis, websites</p>
-    <p class="mb-8">Most of these domains have limited options for exporting and transferring worlds effectively to others</p>
+    <p class="mb-8">But there are limited overlaps between a lot of these domain, effectively encapsulating work</p>
 
-    <p class="mb-2">OnlyWorlds aims to define a common format for world building</p>
-    <p class="mb-6">As defined in these three key goals:</p>
-          <div class="p-1 border border-gray-200 dark:border-gray-700 rounded-b-lg ">
-          <p class="mb-2">1. Provide a data structure 'blueprint' for creating worlds and their content </p>
-              <p class="mb-2">2. Allow users maximum flexibility and range in building worlds with this blueprint </p>
-              <p class="mb-2">3. Make world files transferable across tools, games, devices and web </p>
+<p class="mb-2">Solution</p>
+    <p class="mb-2">OnlyWorlds is a platform for a common format in world building</p>
+    <p class="mb-2">- It proposes a 'blueprint' for creating worlds and their content </p>
+    <p class="mb-2">- That supports the broadest range of worlds</p>
+    <p class="mb-2">- And is transferable across tools, games, devices and web</p>
+
 
     </div>
     </div>
+
+    </div>
+  </div>
+
 
 
 
@@ -29,6 +224,7 @@
   <div id="accordion-collapse-body-2" class="hidden" aria-labelledby="accordion-collapse-heading-2">
      <div class="p-1 border border-gray-200 dark:border-gray-700 rounded-b-lg ">
 
+         // gpt pls make this a list also
          <p class="mb-2">OnlyWorlds is collaborative: in how its central data structure evolves, how it is itnerfaced with, and the worlds themselves  </p>
          <p class="mb-2">Open source and a core blueprint and set of tools that are always free to use</p>
           <p class="mb-2">Users keep full ownership and control over their world data and visibility</p>
@@ -37,23 +233,9 @@
 
     </div>
   </div>
-</div>
+</div>{% endcomment %}
 
-<div class="mb-4"  id="accordion-collapse3" data-accordion="collapse">
- <h2 id="accordion-collapse-heading-3" class="mb-4">
-    <button type="button" class="text-white text-2xl font-bold rounded-lg px-5 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapse-body-3" aria-expanded="false" aria-controls="accordion-collapse-body-3">
-       Implementation
-      <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
-    </button>
-</h2>
 
-  <div id="accordion-collapse-body-3" class="hidden" aria-labelledby="accordion-collapse-heading-3">
-    <div class="p-1 border border-gray-200 dark:border-gray-700 rounded-b-lg ">
-      <p class="mb-2">1. Text</p>
-      <p class="mb-2">2. Text</p>
-    </div>
-  </div>
-</div>
 
 {#<div class="mb-4"  id="accordion-collapse4" data-accordion="collapse">#}
 {# <h2 id="accordion-collapse-heading-4" class="mb-4">#}
