--- a/home/templates/content_FAQs.html
+++ b/home/templates/content_FAQs.html
@@ -1,6 +1,30 @@
 <!-- content_faqs.html -->
 {#<div class="text-center">#}
 <div>
-    <p class="mb-4">FAQs to Follow</p>
+
+ <p class="custom-font mb-1">What does OnlyWorlds do?</p>
+           <ul class="custom-font accordion-content accordion-list-item">
+            <li>Offer world building tools, a data structure to build into, and ways to ship worlds around</li>
+        </ul>
+
+    <br>
+     <p class="custom-font mb-1">How do I use this?</p>
+            <ul class="custom-font accordion-content accordion-list-item">
+            <li>Download the mobile app, create some things, give some feedback, export to website, import to Unity mapper, help develop</li>
+        </ul>
+
+        <br>
+     <p class="custom-font mb-1">Are my worlds future-proof?</p>
+            <ul class="custom-font accordion-content accordion-list-item">
+            <li>Any world data created before the 1.0 release can not be guaranteed as fully compatible with the framework in the long term</li>
+            <li>But worlds and apps are user owned and local, and the developer takes steps to future-proof world data from these early stages</li>
+        </ul>
+
+            <br>
+     <p class="custom-font mb-1">What's with all the categories and fields and types and subtypes that I totally don't agree with? </p>
+            <ul class="custom-font accordion-content accordion-list-item">
+            <li>These are all a rough sketch that provide some baseline simulation and game integration potential </li>
+            <li>While some categories, fields and types are recognized by the author as useful, all parts of it are open to feedback</li>
+        </ul>
 
 </div>
